--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "webpack": "^3.6.0",
+    "material-ui": "^0.16.3",
     "webpack-dev-server": "^2.8.2"
   }
 }
