--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "material-ui": "^0.16.3",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-swipeable-views": "^0.12.8",
+    "react-swipeable-views-native": "^0.12.8",
     "webpack": "^3.6.0",
-    "material-ui": "^0.16.3",
     "webpack-dev-server": "^2.8.2"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1"
   }
 }
